[package]
name = "fromenv-derive"
version = "0.1.0"
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling = "0.21.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing", "derive"] }
