[package]
name = "fromenv"
version = "0.1.0"
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
fromenv-derive = { version = "0.1.0", path = "../fromenv-derive" }

[dev-dependencies]
insta = "1.43.1"
temp-env = "0.3.6"
trybuild = "1.0.110"
secrecy = "0.10.3"
